[gd_scene load_steps=14 format=3 uid="uid://main"]

[ext_resource type="Script" uid="uid://oqmkf8egy0fo" path="res://scripts/game_manager.gd" id="1_game"]
[ext_resource type="Script" uid="uid://dc33wripebyff" path="res://scripts/player.gd" id="2_player"]
[ext_resource type="Script" uid="uid://vscxy1t7lgo8" path="res://scripts/beep_generator.gd" id="3_beep"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.3, 0.3, 0.35, 1)
ambient_light_source = 2
ambient_light_color = Color(0.6, 0.6, 0.6, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_counter"]
albedo_color = Color(0.4, 0.35, 0.3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_conveyor"]
albedo_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_scanner"]
albedo_color = Color(0.1, 0.1, 0.1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_scanner"]
size = Vector3(0.4, 0.3, 0.4)

[sub_resource type="BoxMesh" id="BoxMesh_detection"]
size = Vector3(0.25, 0.25, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_detection"]
transparency = 1
shading_mode = 0
albedo_color = Color(0, 1, 0, 0.3)

[sub_resource type="BoxMesh" id="BoxMesh_laser"]
size = Vector3(0.2, 0.005, 0.005)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_laser"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 0, 0, 0.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.7, 0.7, 0.65, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_game")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707, 0.707, 0, -0.707, 0.707, 0, 10, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="Player" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.6)
script = ExtResource("2_player")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 1.6, 0)
current = true

[node name="HeldItem" type="Node3D" parent="Player/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, -0.6)

[node name="Checkout" type="Node3D" parent="."]

[node name="Counter" type="CSGBox3D" parent="Checkout"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, -0.8)
use_collision = true
size = Vector3(2, 0.8, 0.6)
material = SubResource("StandardMaterial3D_counter")

[node name="ConveyorBelt" type="CSGBox3D" parent="Checkout"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.85, -0.8)
use_collision = true
size = Vector3(1.5, 0.1, 0.5)
material = SubResource("StandardMaterial3D_conveyor")

[node name="Scanner" type="CSGBox3D" parent="Checkout"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -0.8)
use_collision = true
size = Vector3(0.3, 0.25, 0.3)
material = SubResource("StandardMaterial3D_scanner")

[node name="ScannerArea" type="Area3D" parent="Checkout/Scanner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.16)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Checkout/Scanner/ScannerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00023919344, 0.0008163452, 0.00059497356)
shape = SubResource("BoxShape3D_scanner")

[node name="DetectionZone" type="MeshInstance3D" parent="Checkout/Scanner/ScannerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.015365355, -0.1477195, -0.120960474)
mesh = SubResource("BoxMesh_detection")
surface_material_override/0 = SubResource("StandardMaterial3D_detection")

[node name="LaserBeam" type="MeshInstance3D" parent="Checkout/Scanner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, -0.16)
mesh = SubResource("BoxMesh_laser")
surface_material_override/0 = SubResource("StandardMaterial3D_laser")

[node name="Floor" type="CSGBox3D" parent="Checkout"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
use_collision = true
size = Vector3(10, 0.1, 10)
material = SubResource("StandardMaterial3D_floor")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Crosshair" type="CenterContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CrosshairDot" type="Label" parent="UI/Crosshair"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.8)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_font_sizes/font_size = 24
text = "+"

[node name="ScanSound" type="AudioStreamPlayer" parent="."]
script = ExtResource("3_beep")
